# TradeEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake  dockerRunner.sh  protocol.txt  run.sh
APIEngine/: main.js
DockerBase/: Dockerfile
gtest/: CMakeLists.txt
src/: Channel.h  Common.cpp  Common.h  conf.h  main.cpp
src/API/: CreateOrderPackage.h  DataPackage.cpp  DataPackage.h  DataPackageType.h  StreamDispatcher.h
src/Engine/: BuyLedger.cpp  BuyLedger.h  CreateOrderTask.h  Ledger.h  Order.h  ProcessOrderTask.h  SellLedger.cpp  SellLedger.h  Trade.cpp  Trade.h  TradeDeligate.h
src/Net/: APIDataPackage.cpp  APIDataPackage.h  Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  TCPSocketClientListenerTask.cpp  TCPSocketClientListenerTask.h  TESTUDP.h  UDPSocket.h  UDPSocketRecvTask.cpp  UDPSocketRecvTask.h
src/Thread/: CrossThreadEventer.cpp  CrossThreadEventer.h  MainThread.h  QueueThread.cpp  QueueThread.h  SocketPollThread.cpp  SocketPollThread.h  SocketTasker.h  TaskQueue.h  TaskQueueThread.cpp  TaskQueueThread.h  Tasker.h  Thread.h  ThreadManager.cpp  ThreadManager.h  ThreadQueue.h  Threader.cpp  Threader.h
src/Threading/: MainThread.h  SocketPollThread.cpp  SocketPollThread.h  SocketTasker.h  TaskQueue.h  TaskQueueThread.cpp  TaskQueueThread.h  Tasker.h  TaskerGroup.h  Thread.cpp  Thread.h  ThreadManager.cpp  ThreadManager.h  Threader.cpp  Threader.h
src/base/: Allocator.h  Common.h
src/base/Thread/: QueueThread.cpp  Thread.h  ThreadEventer.h  ThreadManager.cpp  ThreadManager.h  ThreadQueue.h  Threader.h
src/includes/: MemoryAllocator.cpp  MemoryAllocator.h  crc32.cc  crc32.h
src/net/: SocketPoolTaskRunner.cpp  SocketPoolTaskRunner.h
src/net/sockets/: DataGramSocket.cpp  DataGramSocket.h  EventSocket.cpp  EventSocket.h  SocketEventDeligate.h  UDPSocket.cpp  UDPSocket.h
src/test/: client.cpp  clientmanager.cpp  ledger.cpp  main.cpp  threads.cpp  udpsockets.cpp
